// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Failed match against query text and values expect().not.toMatchSql({ text, values }) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22mtoMatchSql[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32m{\\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\" WHERE \\\\\\"song\\\\\\".\\\\\\"name\\\\\\" = $1\\", \\"values\\": [\\"Take On Me\\"]}[39m
Received: [31m{\\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\" WHERE \\\\\\"song\\\\\\".\\\\\\"name\\\\\\" = $1\\", \\"values\\": [\\"Take On Me\\"]}[39m"
`;

exports[`Failed match against query text and values expect().toMatchSql({ text, values }) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchSql[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m{\\"text\\": \\"SELECT * FROM \\\\\\"person\\\\\\" WHERE \\\\\\"person\\\\\\".\\\\\\"name\\\\\\" = $1\\", \\"values\\": [\\"Take On Me\\"]}[39m
Received: [31m{\\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\" WHERE \\\\\\"song\\\\\\".\\\\\\"name\\\\\\" = $1\\", \\"values\\": [\\"Take On Me\\"]}[39m"
`;

exports[`Failed match against query text and values expect.not.sqlMatching({ text, values }) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqual[2m([22m[32mexpected[39m[2m) // deep equality[22m

[32m- Expected  -  1[39m
[31m+ Received  + 11[39m

[2m  Array [[22m
[32m-   SqlMatching<{\\"text\\":\\"SELECT * FROM \\\\\\"song\\\\\\" WHERE \\\\\\"song\\\\\\".\\\\\\"name\\\\\\" = $1\\",\\"values\\":[\\"Take On Me\\"]}>,[39m
[31m+   Object {[39m
[31m+     \\"$type\\": Symbol(SqlQuery),[39m
[31m+     \\"buildText\\": [Function anonymous],[39m
[31m+     \\"text\\": \\"[39m
[31m+     SELECT * FROM \\\\\\"song\\\\\\"[39m
[31m+     WHERE \\\\\\"song\\\\\\".\\\\\\"name\\\\\\" = $1[39m
[31m+   \\",[39m
[31m+     \\"values\\": Array [[39m
[31m+       \\"Take On Me\\",[39m
[31m+     ],[39m
[31m+   },[39m
[2m  ][22m"
`;

exports[`Failed match against query text and values expect.sqlMatching({ text, values }) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqual[2m([22m[32mexpected[39m[2m) // deep equality[22m

[32m- Expected  -  1[39m
[31m+ Received  + 11[39m

[2m  Array [[22m
[32m-   SqlMatching<{\\"text\\":\\"SELECT * FROM \\\\\\"person\\\\\\" WHERE \\\\\\"person\\\\\\".\\\\\\"name\\\\\\" = $1\\",\\"values\\":[\\"Take On Me\\"]}>,[39m
[31m+   Object {[39m
[31m+     \\"$type\\": Symbol(SqlQuery),[39m
[31m+     \\"buildText\\": [Function anonymous],[39m
[31m+     \\"text\\": \\"[39m
[31m+     SELECT * FROM \\\\\\"song\\\\\\"[39m
[31m+     WHERE \\\\\\"song\\\\\\".\\\\\\"name\\\\\\" = $1[39m
[31m+   \\",[39m
[31m+     \\"values\\": Array [[39m
[31m+       \\"Take On Me\\",[39m
[31m+     ],[39m
[31m+   },[39m
[2m  ][22m"
`;

exports[`Failed match against query text expect().not.toMatchSql(string) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22mtoMatchSql[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32m{\\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\"\\", \\"values\\": []}[39m
Received: [31m{\\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\"\\", \\"values\\": []}[39m"
`;

exports[`Failed match against query text expect().toMatchSql(string) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchSql[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m{\\"text\\": \\"SELECT * FROM \\\\\\"person\\\\\\"\\", \\"values\\": []}[39m
Received: [31m{\\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\"\\", \\"values\\": []}[39m"
`;

exports[`Failed match against query text expect.not.sqlMatching(string) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqual[2m([22m[32mexpected[39m[2m) // deep equality[22m

[32m- Expected  - 1[39m
[31m+ Received  + 6[39m

[2m  Array [[22m
[32m-   SqlMatching<{\\"text\\":\\"SELECT * FROM \\\\\\"song\\\\\\"\\",\\"values\\":[]}>,[39m
[31m+   Object {[39m
[31m+     \\"$type\\": Symbol(SqlQuery),[39m
[31m+     \\"buildText\\": [Function anonymous],[39m
[31m+     \\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\"\\",[39m
[31m+     \\"values\\": Array [],[39m
[31m+   },[39m
[2m  ][22m"
`;

exports[`Failed match against query text expect.sqlMatching(string) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqual[2m([22m[32mexpected[39m[2m) // deep equality[22m

[32m- Expected  - 1[39m
[31m+ Received  + 6[39m

[2m  Array [[22m
[32m-   SqlMatching<{\\"text\\":\\"SELECT * FROM \\\\\\"person\\\\\\"\\",\\"values\\":[]}>,[39m
[31m+   Object {[39m
[31m+     \\"$type\\": Symbol(SqlQuery),[39m
[31m+     \\"buildText\\": [Function anonymous],[39m
[31m+     \\"text\\": \\"SELECT * FROM \\\\\\"song\\\\\\"\\",[39m
[31m+     \\"values\\": Array [],[39m
[31m+   },[39m
[2m  ][22m"
`;
